@@ -1,5 +1,11 @@
 2004-11-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/new-quote-iterator.cc (quote_ok): new function.
+
+	* input/regression/quote-cue-during.ly: new file.
+
+	* input/regression/quote-grace.ly: new file.
+
 	* scm/define-context-properties.scm (Module): change definition of
 	graceSettings
 
